Fixed column-gap in flexbox

--- a/src/scss/blocks/step-card.scss
+++ b/src/scss/blocks/step-card.scss
@@ -105,17 +105,19 @@ body {
         display: flex;
         flex-wrap: wrap;
 
-        column-gap: 60px;
-        row-gap: 40px;
-
-        margin: 40px 0;
+        & > * {
+            margin: 20px 30px;
+        }
+        margin: calc(40px - 20px) -30px;
 
         @media screen and (max-width: 900px) {
-            column-gap: 30px;
-            row-gap: 20px;
+            & > * {
+                margin: 10px 15px;
+            }
+            margin: calc(40px - 10px) -15px;
         }
         @media screen and (max-width: $md3 + px) {
-            margin: 30px 0;
+            margin: calc(30px - 10px) -15px;
         }
         @media screen and (max-width: $md4 + px) {
             justify-content: center;
@@ -265,12 +267,17 @@ body {
 
     &__controls-wrapper {
         display: flex;
-        column-gap: 40px;
-        margin-bottom: 35px;
+        flex-wrap: wrap;
+        align-items: center;
+
+        & > * {
+            margin: 8px 20px;
+        }
+
+        margin: -8px -20px calc(35px - 8px) -20px;
 
         @media screen and (max-width: $md4 + px) {
-            flex-direction: column;
-            row-gap: 15px;
+            // grid-template-columns: max-content;
         }
     }
 
